--- a/frontend/src/stylesheets/home.css
+++ b/frontend/src/stylesheets/home.css
@@ -1,12 +1,46 @@
-.main-container{
-    height: 500px;
-    width: 500px;
-    border: 6px solid rgb(74, 74, 74) ;
-    border-radius: 2%;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'VT323','Press Start 2P', sans-serif;
+}
+
+body{
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: rgba(156, 47, 66, 255);
+}
+
+
+/* Desktop default */
+.game-wrapper {
+    display: flex;
+    flex-direction: column; /* side-by-side for big screens */
+    align-items: center;
+    height: 80vh;
+    width: 100vw;
+}
+
+.main-container {
+    flex: 2;
+    border: 6px solid rgb(74, 74, 74);
+    border-radius: 2%;
+    max-height: 50%;
+    width: 35%;
     background: rgba(112, 166, 99, 255);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.controls {
+    flex: 1;
+    margin: 2%;
+    width: 35%;
 }
 
 .sidebar{
@@ -77,4 +111,48 @@
     transform: scale(1.1); 
     padding: 7% 13%; 
     cursor: pointer;
+}
+
+/* Mobile Game Boy layout */
+@media (max-width: 768px) {
+    h2{
+        font-size: 1rem;
+    }
+
+    .sidebar{
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border:1px solid red;
+    }
+
+    .bottom{
+        height: 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .game-wrapper {
+        flex-direction: column; /* stacked top/bottom */
+        height: 90vh;
+        width: 90vw;
+    }
+
+    .main-container {
+        flex: none;
+        height: 50vh; /* Top half of screen */
+        width: 100%;
+    }
+
+    .controls {
+        flex: none;
+        height: 50vh; /* Bottom half of screen */
+        width: 100%;
+        border: 10 px solid red;
+    }
 }
