--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,50 @@
 
+
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'VT323','Press Start 2P', sans-serif;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: rgba(156, 47, 66, 255);
+}
+
+
+/* Desktop default */
+.game-wrapper {
+    display: flex;
+    flex-direction: column; /* side-by-side for big screens */
+    align-items: center;
+    height: 80vh;
+    width: 100vw;
+}
+
+.main-container {
+    flex: 2;
+    border: 6px solid rgb(74, 74, 74);
+    border-radius: 2%;
+    max-height: 50%;
+    width: 35%;
+    background: rgba(112, 166, 99, 255);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.controls {
+    flex: 1;
+    margin: 2%;
+    width: 35%;
+}
+
 .App {
   text-align: center;
 }
