--- a/frontend/src/stylesheets/gamecontrols.css
+++ b/frontend/src/stylesheets/gamecontrols.css
@@ -70,7 +70,8 @@
     .controls-area {
         flex-direction: row; /* stack vertically */
         align-items: center;
-        height: 90%;
+        justify-content: center;
+        height: 50%;
         padding: 0;
         margin: 0;
     }   
