--- a/frontend/src/stylesheets/home.css
+++ b/frontend/src/stylesheets/home.css
@@ -126,11 +126,11 @@ body{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border:1px solid red;
     }
 
     .bottom{
         height: 25%;
+        width: 45%;
         display: flex;
         flex-direction: column;
         align-items: center;
